--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ playstore_link: # Enter Google Play Store URL.
 # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon: # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name: Min Misjonsplan # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description: Lag din personlige misjonsplan.
 
@@ -19,7 +19,7 @@ enable_smart_app_banner: true # Set to true to show a smart app banner at top of
 # Information About Yourself
 your_name: Benjamin Weggersen
 your_link: https://minmisjonsplan.app
-your_city: Oslo
+your_city: Oslo, Norway
 email_address: hei@minmisjonsplan.no
 facebook_username:
 instagram_username:
