--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ app_description: Lag din personlige misjonsplan.
 enable_smart_app_banner: true # Set to true to show a smart app banner at top of page on mobile devices.
 
 # Information About Yourself
+your_name: oss
+your_link: mailto:hei@minmisjonsplan.app
 email_address: hei@minmisjonsplan.no
 facebook_username:
 instagram_username:
